Revision history for SWISH-Prog-Lucy

0.01    21 June 2011
    * Initial release, based on SWISH::Prog::KSx.

0.02    23 June 2011
    * Fix bad s/ks/lucy/ strings from initial port.
    * bump SWISH::Prog dependency

0.03    28 June 2011
    * no functional changes, just bumped version because
      SWISH::Prog 0.51 had not been released prior to 0.02
      and all the failing test reports are misleading.

0.04    10 Sept 2011
    * add highlightable_fields feature to expose the highlightable
      attribute of Lucy FullTextField objects.
    * add find_relevant_fields feature to locate the fields
      that matched the query. Depends upon highlightable_fields
      being set to true.

0.05    26 Sept 2011
    * add stemming support for Stemmer configuration and back compat with
      Swish-e v 2.x FuzzyIndexingMode.

0.06    11 Oct 2011
    * fix tests, bump dependency on SWISH::Prog 0.53

0.07    13 Oct 2011
    * expose qp() attribute as part of public API.
    * add get_propnames() method to Searcher.

0.08    19 July 2012
    * bump dependencies
    * switch to Module::Install
    * include bin/lucyx-dump-terms example script
    * add dependency on Sys::Hostname, to support indexes on NFS shares.

0.09    28 July 2012
    * add property_map to respect PropertyNameAlias params in get_property()
    * fix MANIFEST to include missing Module::Install files

0.10    23 Aug 2012
    * croak_on_error => 1 in Search::Query::Parser means invalid queries now
      generate an exception in Searcher.
    * Result->score will always return a positive integer (score || 1)

0.11    xxx
    * refer to header meta file internally using official API method